Java-16で非推奨実装警告が出ていた実装を修正 #224 の修正に関連した修正